Dynegy/src/objects/Tickets__c.object
<CustomObject>
    <description>Enter issues for resolution</description>
    <fields>
        <fullName>Affected_Non_SF_User__c</fullName>
        <label>Affected Non SF User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Affected_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the Name of the affected Salesforce user.  This is important if someone enters the ticket on behalf of someone else.</inlineHelpText>
        <label>Affected User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Assign to a developer if it requires code or data update.</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tickets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bug__c</fullName>
        <label>Ticket Type</label>
        <picklist>
            <picklistValues>
                <fullName>Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data-Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data-Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data-Contract LDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data-LDC Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data-DASR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Data-Lodestar</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Lodestar</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>On-Site Support</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Approved_Date__c</fullName>
        <description>Date Approved by Business</description>
        <inlineHelpText>Date Approved by the Business.  See Notes for approval.</inlineHelpText>
        <label>Business Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Process__c</fullName>
        <label>Business Process</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Request Pricing (Sales function)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Pricing (Risk)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Contract Creation (Sales)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Accept Contract (Account Management)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Account Set Up (Account Management)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - DASR (Account Management)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - Validation (Account Management)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 - EDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - Settlements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - Settlements UCB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 - A/R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 - Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 - Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 - Brokers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accept Contract (Account Management)</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Account Set Up (Account Management)</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Creation (Sales)</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>DASR (Account Management)</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing (Risk)</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Request Pricing (Sales)</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Validation (Account Management)</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Department that the user belongs to</description>
        <inlineHelpText>Department that the user belongs to</inlineHelpText>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acc Mgt- residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biz Ops.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settlements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Management</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Business Operations</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <inlineHelpText>The business defines the impact.  This means the impact of this ticket in regards to the number of users or the number of customers affected.  It usually drives the priority and the rank.</inlineHelpText>
        <label>Impact</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract LDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DASR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDC Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDC Vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conract LDC</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>LDC Vendor</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>The priority established by the business.  There can be many top priority tickets, but not all can be resolved at once.  Please use the rank to distinguish which tickets need to be worked on first in the rank field.</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <inlineHelpText>The rank defined by the business.  These are tickets to be worked on by IT according to the rank.  Other quick-win tickets will also be worked on.</inlineHelpText>
        <label>Rank</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCR_Target_Date__c</fullName>
        <label>SCR Target Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SCR__c</fullName>
        <label>SCR</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_Number__c</fullName>
        <inlineHelpText>This task was logged in the SharePoint site during UAT and not resolved before Production go-live.</inlineHelpText>
        <label>SharePoint Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <inlineHelpText>Date of the last status.</inlineHelpText>
        <label>Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status set by IT, indicates were in the life cycle the ticket is.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requires More Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Retail Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled for Prod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <inlineHelpText>Enter a brief description of the issue.</inlineHelpText>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <description>Application the Ticket pertains to</description>
        <label>System</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iAvenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodestar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CES BLUE</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TESTNUM__c</fullName>
        <label>TESTNUM</label>
        <precision>13</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Delivery_Date__c</fullName>
        <inlineHelpText>The data IT expects to deliver.</inlineHelpText>
        <label>Target Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Triage_Comments__c</fullName>
        <inlineHelpText>Business Triage Team enters comments for IT</inlineHelpText>
        <label>Triage Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <inlineHelpText>The user specifies the urgency to resolve the ticket.  Please specify why a ticket is considered &quot;1-Critical&quot;.  1-Critical means all other work needs to stop in order to resolve this ticket.</inlineHelpText>
        <label>Urgency</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Critical</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>2 - High</fullName>
                <color>#FF9900</color>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Medium</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Low</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Ticket_Number__c</fullName>
        <inlineHelpText>Used to track the ticket opened in the vendor&apos;s issue tracking system.  This number should be provided to the vendor when calling and working on an issue.</inlineHelpText>
        <label>Vendor Ticket Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Stream__c</fullName>
        <description>IT completes this section.  It helps group the tasks into work streams.</description>
        <label>Work Stream</label>
        <picklist>
            <picklistValues>
                <fullName>Phase I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Initiatives</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Ticket</label>
    <listViews>
        <fullName>New</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Summary__c</columns>
        <columns>Status_Date__c</columns>
        <columns>Bug__c</columns>
        <columns>Urgency__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Assigned_Developer__c</columns>
        <columns>Target_Delivery_Date__c</columns>
        <columns>Affected_User__c</columns>
        <columns>Work_Stream__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>1 - New (to be Triaged)</label>
    </listViews>
    <listViews>
        <fullName>Open2</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Affected_User__c</columns>
        <columns>Rank__c</columns>
        <columns>Urgency__c</columns>
        <columns>Summary__c</columns>
        <columns>Status__c</columns>
        <columns>Bug__c</columns>
        <columns>Assigned_Developer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notContain</operation>
            <value>Resolved,Cancelled,Duplicate</value>
        </filters>
        <label>2 - Open</label>
    </listViews>
    <listViews>
        <fullName>Resolved</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Summary__c</columns>
        <columns>Affected_User__c</columns>
        <columns>Resolution__c</columns>
        <columns>Status_Date__c</columns>
        <columns>Bug__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Resolved,Cancelled,Duplicate</value>
        </filters>
        <label>3 - Resolved</label>
    </listViews>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Ticket Summary</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>